Fixed scrollspy and layout issues with navbar.
Used fix to scrollspy from https://github.com/P2000/bootstrap/commit/7e286a7f5cd7ddee7409ba15eacfb70e33ca6c2d.

--- a/css/custom.css
+++ b/css/custom.css
@@ -46,7 +46,14 @@ body {
 .image {
 	display: block;
 	width: 80%;
-	margin: 0 auto;
+	margin: 20px auto;
+}
+
+/* make sure that anchors jump to 50px below the top of the page,
+ * to prevent the navbar from overlapping */
+#wrap h1 {
+	padding-top: 50px;
+	margin-top: -50px;
 }
 
 /* undo weird padding from Bootstrap */
